--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "cypress": "^12.9.0",
     "typescript": "^5.0.3"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.7"
   }
 }
